# signatures

./: .gitattributes  .gitignore  README.md  cli_detect.py  convert_to_yolo.py  pyproject.toml  test_on_dataset.py  train_yolo_signatures.py
model_zoo/yolo_intensity_augmented/: args.yaml  best.onnx  results.csv
model_zoo/yolo_intensity_geom_augmented/: args.yaml  best.onnx  results.csv
model_zoo/yolo_non_augmented/: args.yaml  best.onnx  results.csv
my_simple_model/: train_main.py
my_simple_model/data_modules/: signature_data_module.py
my_simple_model/model_modules/: mobilenet_model.py  simple_model.py
